# cmake_gpu

cmake-omp/: README
cmake-omp/src/: CMakeLists.txt  boo.c  boo.f90  main.f90
hdf5/: CMakeLists.txt
hip_runtime/: CMakeLists.txt  main.cpp
link_options/: CMakeLists.txt  abc.cpp  abc_noomp.cpp  test.cpp
test_dpcpp/: CMakeLists.txt  IntelDPCPPConfig.cmake  MyIntelDPCPPConfig.cmake  sycl_device_code.cpp  sycl_host_calls.cpp
test_rocm/: CMakeLists.txt  foo.hip.cpp
